--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Buddha quotes</title>
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,300,600' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<h1>Buddha quotes</h1>
+<div class="buddha"></div>
+<p id="quote"></p>
+<br/>
+<button id="tweet-button">Tweet</button>
+<button id="next-button">Next quote</button>
 
+<script src="main.js"></script>
 </body>
 </html>
