--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buddha quotes</title>
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,300,600' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,8 +13,8 @@
 <div class="buddha"></div>
 <p id="quote"></p>
 <br/>
-<button id="tweet-button">Tweet</button>
-<button id="next-button">Next quote</button>
+<button id="tweet-button"><i class="fa fa-twitter" aria-hidden="true"></i> Tweet</button>
+<button id="next-button">Next one</button>
 
 <script src="main.js"></script>
 </body>
